# baby_cpr

./: CMakeLists.txt  README.md  README_EN.md  README_ES.md  sdkconfig
PCB/rcp_neo_v1.0/: rcp_neo_v1.0.kicad_pcb  rcp_neo_v1.0.kicad_pro  rcp_neo_v1.0.kicad_sch
PCB/rcp_neo_v2.2/: rcp_neo_v2.2.kicad_pcb  rcp_neo_v2.2.kicad_pro  rcp_neo_v2.2.kicad_sch
chaleco/: Medidas maniqui.md
components/buzzer/: CMakeLists.txt  Kconfig  README.md  buzzer.c  idf_component.yml  melodys.c
components/dsp/: CMakeLists.txt  Kconfig  README.md  dsp.c
components/hall_sensor/: CMakeLists.txt  Kconfig  LICENSE  README.md  hall_sensor.c  idf_component.yml
components/lcd/: CMakeLists.txt  idf_component.yml  lcd.c
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/components/: ui_comp_hook.c
components/ui/images/: ui_img_754372804.c  ui_img_back_png.c  ui_img_bat_png.c  ui_img_cpr_png.c  ui_img_ese_png.c  ui_img_gauge_png.c  ui_img_icon_conf_png.c  ui_img_linea_png.c  ui_img_play_png.c  ui_img_pointer_png.c  ui_img_sound_on_png.c  ui_img_stats_bg_png.c  ui_img_stop_png.c  ui_img_title1_png.c  ui_img_title2_png.c  ui_img_title3_png.c  ui_img_title4_png.c  ui_img_training_png.c  ui_img_uner_png.c
components/ui/screens/: ui_Evaluation1.c  ui_MenuPricipal.c  ui_ResultsScreen.c  ui_SplashScreen.c  ui_Training.c  ui_configuration.c
docs/doxygen/: annotated.html  buzzer_8h.html  buzzer_8h__incl.map  classes.html  (+61 more)
main/: CMakeLists.txt  configuration.h  idf_component.yml  main.c
videos/: video_demo_simul.webm
(+50 files in other folders)
